--- a/partes/popup.html
+++ b/partes/popup.html
@@ -43,7 +43,7 @@
             if (imageName) {
                 const modal = document.getElementById('imageModal');
                 const imgElement = document.getElementById('modalImage');
-                imgElement.src = '/partes-historias/' + imageName;
+                imgElement.src = '/partes-historias/' + imageName + '.jpg';
 
                 imgElement.onerror = function() {
                     alert('Erro ao carregar a imagem.');
