--- a/partes-historias/popup.html
+++ b/partes-historias/popup.html
@@ -43,7 +43,7 @@
             if (imageName) {
                 const modal = document.getElementById('imageModal');
                 const imgElement = document.getElementById('modalImage');
-                imgElement.src = '/partes-historias/' + imageName + '.jpg';
+                imgElement.src = 'C:\Users\eduar\Documents\GitHub\aula-4-fase-1\partes-historias\h1s1.jpg';
 
                 imgElement.onerror = function() {
                     alert('Erro ao carregar a imagem.');
